--- a/quizzapp-frontend/src/app/quiz-round/quiz-round.component.html
+++ b/quizzapp-frontend/src/app/quiz-round/quiz-round.component.html
@@ -1,24 +1,22 @@
 <!-- Question posed as header -->
 <header class="header">
-  <h1 *ngIf="isFirst">{{ htmlDecode(questions[0]?.question!) }}</h1>
-  <h1 *ngIf="isSecond">{{ htmlDecode(questions[1]?.question!) }}</h1>
-  <h1 *ngIf="isThird">{{ htmlDecode(questions[2]?.question!) }}</h1>
+  <h1 >{{ htmlDecode(currentQuestion?.question!) }}</h1>
 </header>
 
 <!-- Stepper starting 3 questions -->
 <mat-horizontal-stepper [linear]="true">
 
   <!-- First Question -->
-  <mat-step>
+  <mat-step [completed]="isVisible">
     <ng-template matStepLabel>Question Nr.1</ng-template>
     <ng-template matStepContent>
       <div class="grid">
         <mat-grid-list cols="2" rowHeight="2:1">
-          <mat-grid-tile *ngFor="let a of shuffledAnswersOne">
+          <mat-grid-tile *ngFor="let a of shuffledAnswers">
             <div class="answerbox"
                  (click)="clicked(a)"
-                 [ngClass]="{'correct' : answered && a === questions[0]?.correct_answer,
-                  'incorrect' : answered && a !== questions[0]?.correct_answer}">
+                 [ngClass]="{'correct' : answered && a === currentQuestion?.correct_answer,
+                  'incorrect' : answered && a !== currentQuestion?.correct_answer}">
               {{ htmlDecode(a) }}
             </div>
           </mat-grid-tile>
@@ -27,24 +25,24 @@
       </div>
 
       <!--Buttons appearing after questions has been answered -->
-      <div class="buttons"> <!--*ngIf="isVisible"-->
+      <div class="buttons">
         <button mat-button matStepperPrevious>Abort round</button>
-        <button mat-button matStepperNext (click)="startTimer(30); setQuestionFlag(isFirst); setQuestionFlag(isSecond)">Next question</button>
+        <button mat-button matStepperNext *ngIf="isVisible" (click)="nextQuestion(0)">Next question</button>
       </div>
     </ng-template>
   </mat-step>
 
   <!-- Second Question -->
-  <mat-step>
+  <mat-step [completed]="isVisible">
     <ng-template matStepLabel>Question Nr.2</ng-template>
     <ng-template matStepContent>
       <div class="grid">
         <mat-grid-list cols="2" rowHeight="2:1">
-          <mat-grid-tile *ngFor="let a of shuffledAnswersTwo">
+          <mat-grid-tile *ngFor="let a of shuffledAnswers">
             <div class="answerbox"
                  (click)="clicked(a)"
-                 [ngClass]="{'correct' : answered && a === questions[1]?.correct_answer,
-                  'incorrect' : answered && a !== questions[1]?.correct_answer}">
+                 [ngClass]="{'correct' : answered && a === currentQuestion?.correct_answer,
+                  'incorrect' : answered && a !== currentQuestion?.correct_answer}">
               {{ htmlDecode(a) }}
             </div>
           </mat-grid-tile>
@@ -53,24 +51,24 @@
       </div>
 
       <!--Buttons appearing after questions has been answered -->
-      <div class="buttons"> <!--*ngIf="isVisible"-->
+      <div class="buttons">
         <button mat-button matStepperPrevious>Abort round</button>
-        <button mat-button matStepperNext (click)="startTimer(30); setQuestionFlag(isSecond); setQuestionFlag(isThird)">Next question</button>
+        <button mat-button matStepperNext *ngIf="isVisible" (click)="nextQuestion(1)">Next question</button>
       </div>
     </ng-template>
   </mat-step>
 
   <!-- Third Question -->
-  <mat-step>
+  <mat-step [completed]="isVisible">
     <ng-template matStepLabel>Question Nr.3</ng-template>
     <ng-template matStepContent>
       <div class="grid">
         <mat-grid-list cols="2" rowHeight="2:1">
-          <mat-grid-tile *ngFor="let a of shuffledAnswersThree">
+          <mat-grid-tile *ngFor="let a of shuffledAnswers">
             <div class="answerbox"
                  (click)="clicked(a)"
-                 [ngClass]="{'correct' : answered && a === questions[2]?.correct_answer,
-                  'incorrect' : answered && a !== questions[2]?.correct_answer}">
+                 [ngClass]="{'correct' : answered && a === currentQuestion?.correct_answer,
+                  'incorrect' : answered && a !== currentQuestion?.correct_answer}">
               {{ htmlDecode(a) }}
             </div>
           </mat-grid-tile>
@@ -79,9 +77,9 @@
       </div>
 
       <!--Buttons appearing after questions has been answered -->
-      <div class="buttons"> <!--*ngIf="isVisible"-->
+      <div class="buttons">
         <button mat-button matStepperPrevious>Abort round</button>
-        <button mat-button matStepperNext (click)="startTimer(30)">Next question</button>
+        <button mat-button matStepperNext *ngIf="isVisible" (click)="nextQuestion(2)">Finish round</button>
       </div>
     </ng-template>
   </mat-step>
