added to login to fetch player after login

--- a/quizzapp-frontend/src/app/login/login.component.html
+++ b/quizzapp-frontend/src/app/login/login.component.html
@@ -13,7 +13,7 @@
     </mat-form-field>
 
     <button mat-flat-button color="primary" class="btn-signin" type="button" (click)="signUpClicked()">Sign Up</button>
-    <button mat-flat-button color="primary" class="btn-signin" type="submit" [disabled]="!playerForm.valid">Submit</button>
+    <button mat-flat-button color="primary" class="btn-signin" type="submit" >Submit</button>
   </form>
 
   <div class="errormessage-container" *ngIf="showErrorMessage">
