added basic support for dynamic categories and deleted dummy data

--- a/quizzapp-frontend/src/app/quiz-round/quiz-round.component.html
+++ b/quizzapp-frontend/src/app/quiz-round/quiz-round.component.html
@@ -79,7 +79,7 @@
       <!--Buttons appearing after questions has been answered -->
       <div class="buttons">
         <button mat-button matStepperPrevious>Abort round</button>
-        <button mat-button matStepperNext *ngIf="isVisible" (click)="nextQuestion(2)">Finish round</button>
+        <button mat-button matStepperNext *ngIf="isVisible"><a href="http://localhost:4200/homepage/overview">Finish round</a></button>
       </div>
     </ng-template>
   </mat-step>
